# Design-Patterns-Playground

./: .clang-format  .gitignore  README.md
behavioral/: README.md
behavioral/strategy/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
behavioral/strategy/include/: CramersRule.hpp  DeterminantComputationStrategy.hpp  GaussJordanElimination.hpp  GaussianElimination.hpp  LinearSystem.hpp  SarrusRule.hpp  SolvingStrategy.hpp
behavioral/strategy/include/determinant-strategy/: DeterminantComputationStrategy.hpp  LeibnizRule.hpp  SarrusRule.hpp
behavioral/strategy/include/system-strategy/: CramersRule.hpp  GaussianElimination.hpp  SolvingStrategy.hpp
behavioral/strategy/src/: CramersRule.cpp  GaussJordanElimination.cpp  GaussianElimination.cpp  LinearSystem.cpp  SarrusRule.cpp  main.cpp
behavioral/strategy/src/determinant-strategy/: LeibnizRule.cpp
behavioral/strategy/src/system-strategy/: GaussianElimination.cpp
creational/: README.md
structural/: README.md
structural/adapter/: .gitignore  CMakeLists.txt  README.md
structural/adapter/include/filesystem/: DirectoryBrowser.hpp  FileBrowser.hpp  FileSystemEntity.hpp
structural/adapter/include/interface/: GraphicNode.hpp  Node.hpp  TreeAccessorDelegate.hpp  TreeDisplay.hpp
structural/adapter/include/number/: NumberEntity.hpp  NumberTreeBrowser.hpp
structural/adapter/src/: main.cpp
structural/adapter/src/filesystem/: DirectoryBrowser.cpp  FileBrowser.cpp
structural/adapter/src/interface/: TreeDisplay.cpp
structural/adapter/src/number/: NumberEntity.cpp  NumberTreeBrowser.cpp
(+118 files in other folders)
